--- a/examples/notebook_dp_tpxquad.html
+++ b/examples/notebook_dp_tpxquad.html
@@ -14281,7 +14281,7 @@ a.anchor-link {
 
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_rows&#39;</span><span class="p">,</span> <span class="mi">10000</span><span class="p">)</span>
 <span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_columns&#39;</span><span class="p">,</span> <span class="mi">500</span><span class="p">)</span>
-<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_colwidth&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">)</span>
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">&#39;display.max_colwidth&#39;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
 </pre></div>
 
      </div>
@@ -14297,7 +14297,6 @@ a.anchor-link {
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">filename1</span> <span class="o">=</span> <span class="s2">&quot;/home/user/path/to/pattern_1.txt&quot;</span>
 <span class="n">filename2</span> <span class="o">=</span> <span class="s2">&quot;/home/user/path/to/pattern_2.txt&quot;</span>
-<span class="n">filename</span> <span class="o">=</span> <span class="s2">&quot;/home/eric/cernbox/Betapix_CERN/2016/2016-04_Mg/raw002/pattern_d3_Npix0-50.txt&quot;</span>
 </pre></div>
 
      </div>
@@ -14409,8 +14408,8 @@ final_size 63
 <div class=" highlight hl-ipython3"><pre><span></span><span class="o">%</span><span class="k">matplotlib</span> notebook
 <span class="n">fg</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">()</span>
 <span class="n">ax</span> <span class="o">=</span> <span class="n">fg</span><span class="o">.</span><span class="n">add_subplot</span><span class="p">(</span><span class="s1">&#39;111&#39;</span><span class="p">)</span>
-<span class="n">dp</span><span class="o">.</span><span class="n">draw</span><span class="p">(</span><span class="n">ax</span><span class="p">,</span> <span class="n">percentiles</span><span class="o">=</span><span class="p">(</span><span class="mf">0.04</span><span class="p">,</span> <span class="mf">0.99</span><span class="p">))</span>
-<span class="n">dp</span><span class="o">.</span><span class="n">get_angle_tool</span><span class="p">()</span>
+<span class="n">dp_plotter</span> <span class="o">=</span> <span class="n">dp</span><span class="o">.</span><span class="n">draw</span><span class="p">(</span><span class="n">ax</span><span class="p">,</span> <span class="n">percentiles</span><span class="o">=</span><span class="p">(</span><span class="mf">0.04</span><span class="p">,</span> <span class="mf">0.99</span><span class="p">))</span>
+<span class="n">dp_plotter</span><span class="o">.</span><span class="n">get_angle_tool</span><span class="p">()</span>
 </pre></div>
 
      </div>
@@ -14431,9 +14430,9 @@ final_size 63
 
 
 
-<div id="2e6ca44a-ac75-4dce-9eb0-0b88aa6cbb5a" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
+<div id="d7ae13ff-5250-49e0-a627-73a6e6c990f0" class="jp-RenderedJavaScript jp-OutputArea-output " data-mime-type="application/javascript">
 <script type="text/javascript">
-var element = document.getElementById('2e6ca44a-ac75-4dce-9eb0-0b88aa6cbb5a');
+var element = document.getElementById('d7ae13ff-5250-49e0-a627-73a6e6c990f0');
 /* Put everything inside the global mpl namespace */
 window.mpl = {};
 
